FIX Navitem on small devides

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ nav{
 	/* margin: 1px; */
 	margin-top: 1px;
 	margin-left: 3px;
+	
 }
 
 .tab button{
@@ -186,15 +187,7 @@ button:hover {
   .col-75 {
 	padding: 0 16px;
   }
-  
-  .container {
-	/* width: 50%; */
-	/* background-color: #f2f2f2; */
-	/* padding: 5px 20px 15px 20px; */
-	/* border: 1px solid lightgrey; */
-	/* border-radius: 3px; */
-  }
-  
+    
   input[type=text] {
 	width: 100%;
 	margin-bottom: 20px;
